# learn-openmp

./: CMakeLists.txt  README.md  linear.cpp  linear.h  main.cpp  matrix_sum.cpp  matrix_sum.h  pi.cpp  pi.h  simpson.cpp  simpson.h  utils.cpp  utils.h
